syntax = "proto3";

option csharp_namespace = "School.gRPC.Protos";

//import "google/protobuf/timestamp.proto";	
import "google/protobuf/empty.proto";

service Enrollment {
	rpc GetEnrollment (EnrollmentIDRequest) returns (EnrollmentReply);
	rpc GetEnrollments (google.protobuf.Empty) returns (Enrollments);	   
	//Create
	rpc AddEnrollment (EnrollmentReply) returns(google.protobuf.Empty);	   
	//Update
	//rpc UpdateEnrollment (EnrollmentReply) returns(google.protobuf.Empty);	   
	//Delete
	rpc DeleteEnrollment (EnrollmentReply) returns(google.protobuf.Empty);
}

message EnrollmentIDRequest {
  int32 EnrollmentID = 1;
}

// The response message containing the greetings.
message EnrollmentReply {
  int32 EnrollmentID = 1;
  int32 StudentID = 2;
  int32 CourseID = 3;
}

message Enrollments {
	repeated EnrollmentReply Enrollments = 1;
}